oscars/examples/api_prototype/tests/ui/gc_cannot_store_outer_scope.stderr
error[E0521]: borrowed data escapes outside of closure
  --> examples/api_prototype/tests/ui/gc_cannot_store_outer_scope.rs:32:9
   |
27 |     let mut holder: Option<Holder<'_>> = None;
   |         ---------- `holder` declared here, outside of the closure body
...
30 |     ctx.mutate(|cx| {
   |                 -- `cx` is a reference that is only valid in the closure body
31 |         let gc = cx.alloc(42);
32 |         holder = Some(Holder { gc });  // ERROR: 'gc does not live long enough
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `cx` escapes the closure body here
